--- a/express-ts/package.json
+++ b/express-ts/package.json
@@ -15,7 +15,8 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.2",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "trim-newlines": ">=3.0.1"
   },
   "dependencies": {
     "express": "^4.17.1",
